<resources>
    <string name="app_name">Interrupt 7.0</string>
    <string name="app_slogan">Everything under CTRL</string>
    <string name="app_description">Interrupt 7.0 is a Techno-Cultural fest Organised &amp; Hosted by
        the students of <b>Dept. of Computer Science &amp; Engineering, Dr. Ambedkar Institute of Technology
            Bengaluru, Karnataka.</b>\nIt is a 2 Days Extravaganza of Cultural and Technical events.
        Come, lets be a part of it..!\n<b>-Organising Team</b></string>
    <string name="currency">\u20B9</string>
    <string name="iv_divider">Divider image</string>


    <string name="btn_send">Send</string>

    <string name="prompt_sign_out_title">SignOut ?</string>
    <string name="prompt_sign_out_message">You will have to SignIn again to use the app.</string>
    <string name="prompt_pick_image">Select a Picture</string>

    <string name="err_storage_permission">Storage Permission Declined. Kindly Give Storage Permissions</string>
    <string name="err_offline">Oops :( We live on the Internet. Connect to Proceed.!</string>
    <string name="err_feedback_post_failed">Oops :( Feedback Post Failed…</string>

    <string name="snack_feedback_post_successful">Thank You, Your Feedback was Posted Successfully</string>

    <string name="section_a">A</string>
    <string name="section_b">B</string>
    <string name="section_c">C</string>
    <string name="section_na">NA</string>

    <string name="hint_email">Email ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_pin">Pin</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone No</string>
    <string name="hint_usn">USN</string>
    <string name="hint_department">Department</string>
    <string name="hint_section">Section</string>
    <string name="hint_semester">Semester</string>
    <string name="et_usn_pre_fill">1DA</string>
    <string name="sem_2">2nd</string>
    <string name="sem_4">4th</string>
    <string name="sem_6">6th</string>
    <string name="sem_8">8th</string>

    <string name="name">Name</string>
    <string name="email">Email ID</string>
    <string name="phone_no">Phone No.</string>
    <string name="usn">USN</string>
    <string name="department">Dept.</string>
    <string name="section">Section</string>
    <string name="sem">Semester</string>
    <string name="college">College</string>
    <string name="team_members">Team Members</string>
    <string name="registered_by">Registered By</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="snack_back_press_twice">We\'ll Miss you, Press Back Again to exit.</string>
    <string name="tv_under_construction">This Page is Under Construction…  We\'ll be ready soon.</string>

    <string name="cd_banner">Banner Image</string>
    <string name="cd_event_desc">Event Description</string>
    <string name="cd_event_time">Event Time</string>
    <string name="cd_event_venue">Event Venue</string>
    <string name="cd_event_coordinator">Event Coordinator</string>
    <string name="tv_admin_feature_user_management">User Management</string>
    <string name="tv_admin_feature_organiser_management">Organisers Management</string>
    <string name="tv_admin_feature_feedback_management">User Feedbacks</string>
    <string name="tv_heading_user_feedback">User Feedback</string>
    <string name="tv_empty_feedback">No Feedbacks Yet</string>
    <string name="hint_designation">Designation</string>
    <string name="tv_permissions">Permissions</string>
    <string name="btn_add">Add</string>
    <string name="hint_roles">Roles(seperated by , )</string>
    <string name="cb_permission_download_events_registrations">Can Download Events Registrations</string>
    <string name="cb_permission_perform_registrations">Can Perform Registrations</string>
    <string name="cb_permission_view_event_registrations">Can View Event Registrations</string>
    <string name="cb_permission_edit_event_info">Can Edit Event Info</string>
    <string name="cb_permission_view_event_collections">Can View Event Collections</string>
    <string name="cb_permission_edit_event_schedule">Can Edit Event Schedule</string>
    <string name="cb_permission_edit_event_venue">Can Edit Event Venue</string>
    <string name="cb_permission_add_event_categories">Can Add Event Categories</string>
    <string name="cb_permission_add_events">Can Add Events</string>
    <string name="cb_permission_add_event_coordinators">Can Add Event Coordinators</string>

    <!--FOR COUNTDOWN-->
    <plurals name="days">
        <item quantity="zero">%d Days</item>
        <item quantity="one">%d Day</item>
        <item quantity="other">%d Days</item>
    </plurals>
    <plurals name="hours">
        <item quantity="zero">%d Hrs</item>
        <item quantity="one">%d Hour</item>
        <item quantity="other">%d Hrs</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="zero">%d Mins</item>
        <item quantity="one">%d Min</item>
        <item quantity="other">%d Mins</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="zero">%d Secs</item>
        <item quantity="one">%d Sec</item>
        <item quantity="other">%d Secs</item>
    </plurals>


</resources>
