<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="20dp">
    <!--NAME-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_name">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/hint_name" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--EMAIL-->
    <include layout="@layout/layout_input_email"/>
    <!--PHONE NUMBER-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_phone">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_phone" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--USN-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_usn">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:text="@string/et_usn_pre_fill"
            android:hint="@string/hint_usn" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--DEPARTMENT-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_department">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:hint="@string/hint_department" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--SECTIONS-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/hint_section"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
    <RadioGroup
        android:id="@+id/rg_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--SECTION A-->
        <RadioButton
            android:id="@+id/rb_section_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_a"
            android:checked="true"
            android:layout_weight="1"/>
        <!--SECTION B-->
        <RadioButton
            android:id="@+id/rb_section_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_b"
            android:layout_weight="1"/>
        <!--SECTION C-->
        <RadioButton
            android:id="@+id/rb_section_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_c"
            android:layout_weight="1"
            />
        <!--SECTION NOT APPLICABLE-->
        <RadioButton
            android:id="@+id/rb_section_na"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_na"
            android:layout_weight="1"/>
    </RadioGroup>
    <!--SEMESTER-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/hint_semester"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
    <RadioGroup
        android:id="@+id/rg_semester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--SEM 2-->
        <RadioButton
            android:id="@+id/rb_sem_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sem_2"
            android:checked="true"
            android:layout_weight="1"/>
        <!--SEM 4-->
        <RadioButton
            android:id="@+id/rb_sem_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sem_4"
            android:layout_weight="1"/>
        <!--SEM 6-->
        <RadioButton
            android:id="@+id/rb_sem_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sem_6"
            android:layout_weight="1"
            />
        <!--SEM 8-->
        <RadioButton
            android:id="@+id/rb_sem_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sem_8"
            android:layout_weight="1"
            />
        <!--SEM NOT APPLICABLE-->
        <RadioButton
            android:id="@+id/rb_sem_na"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_na"
            android:layout_weight="1"/>
    </RadioGroup>
</LinearLayout>