<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:background="@color/admin_bg"
    tools:context="com.bharathksunil.interrupt.admin.ui.fragments.NewOrganiserFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <!--HEADING-->
        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textAppearance="@style/Admin.TextAppearance.Medium"
            android:textColor="@color/green"
            tools:text="New Organiser" />
        <!--ORGANISER PROFILE IMAGE-->
        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@id/tv_heading"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/cd_profile_image"
            app:srcCompat="@drawable/ic_profile" />

        <include
            layout="@layout/layout_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_heading" />
        <!--ORGANISER NAME-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/Admin.EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_profile"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/hint_name"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--ORGANISER EMAIL-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Admin.EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--ORGANISER PHONE NO-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone"
            style="@style/Admin.EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/hint_phone"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--ORGANISER ROLES-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_roles"
            style="@style/Admin.EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/hint_roles"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--ORGANISER DESIGNATION-->
        <TextView
            android:id="@+id/tv_designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_roles"
            android:text="@string/hint_designation"
            android:textAppearance="@style/Admin.TextAppearance.Medium" />

        <Spinner
            android:id="@+id/spinner_designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_designation" />

        <!--ORGANISER PERMISSIONS-->
        <TextView
            android:id="@+id/tv_permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_designation"
            android:layout_marginTop="8dp"
            android:text="@string/tv_permissions"
            android:textAppearance="@style/Admin.TextAppearance.Medium" />

        <include
            android:id="@+id/layout_permissions_organisers"
            layout="@layout/layout_permission_organisers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_permissions"
            android:layout_marginTop="16dp" />

        <include
            android:id="@+id/layout_permissions_coordinators"
            layout="@layout/layout_permissions_coordinators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_permissions_organisers" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/Admin.ButtonNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_permissions_coordinators"
            android:text="@string/btn_add"
            android:theme="@style/Admin.ButtonNormal" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Admin.ButtonInverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_submit"
            android:text="@android:string/cancel"
            android:theme="@style/Admin.ButtonInverse" />

    </RelativeLayout>
</ScrollView>
