<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:background="@drawable/background_gradient_top_down"
    tools:context="com.bharathksunil.interrupt.dashboard.ui.fragments.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="16dp">
        <!--APP ABOUT-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/accent"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp">
                <!--APP ICON-->
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/app_icon" />
                <!--HEADING: APP NAME-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="@style/Dashboard.TextAppearance.Title"
                    android:textColor="@color/primary_dark" />
                <!--APP SLOGAN-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_slogan"
                    android:textAppearance="@style/Dashboard.TextAppearance.Small" />
                <include layout="@layout/layout_countdown_timer"/>
                <!--APP DESCRIPTION-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/app_description"
                    android:textAppearance="@style/Dashboard.TextAppearance.Small"
                    android:textColor="@color/primary_text" />
                <!--EVENT LINKS-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">
                    <!--FACEBOOK-->
                    <ImageView
                        android:id="@+id/iv_app_fb"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dash_social_icon_size"
                        android:layout_weight="1"
                        android:contentDescription="@string/cd_profile_image"
                        android:src="@drawable/ic_facebook" />
                    <!--INSTAGRAM-->
                    <ImageView
                        android:id="@+id/iv_app_instagram"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dash_social_icon_size"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/cd_profile_image"
                        android:src="@drawable/ic_instagram" />
                    <!--GOOGLE PLAY-->
                    <ImageView
                        android:id="@+id/iv_app_play"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dash_social_icon_size"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/cd_profile_image"
                        android:src="@drawable/ic_google_play" />
                    <!--GITHUB-->
                    <ImageView
                        android:id="@+id/iv_app_github"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dash_social_icon_size"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/cd_profile_image"
                        android:src="@drawable/ic_github"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!--ABOUT DEVELOPER-->
        <include layout="@layout/layout_about_developer"/>
    </LinearLayout>

</ScrollView>
